# ChangeLog for dev-ruby/ruby-inline
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-inline/ChangeLog,v 1.10 2008/12/26 15:48:19 graaff Exp $

*ruby-inline-3.8.1 (26 Dec 2008)

  26 Dec 2008; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.8.1.ebuild:
  Version bump

*ruby-inline-3.7.0 (06 Oct 2008)

  06 Oct 2008; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.7.0.ebuild:
  Version bump with ruby 1.9 compatibility and minor bugfixes

  06 Oct 2008; Hans de Graaff <graaff@gentoo.org> -ruby-inline-3.6.2.ebuild,
  -ruby-inline-3.6.4.ebuild, -ruby-inline-3.6.5.ebuild,
  -ruby-inline-3.6.6.ebuild:
  Remove old versions

*ruby-inline-3.6.7 (24 Mar 2008)

  24 Mar 2008; Richard Brown <rbrown@gentoo.org> +ruby-inline-3.6.7.ebuild:
  Version bump.

*ruby-inline-3.6.6 (26 Jan 2008)

  26 Jan 2008; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.6.6.ebuild:
  Version bump: better Windows support

*ruby-inline-3.6.5 (24 Nov 2007)

  24 Nov 2007; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.6.5.ebuild:
  Version bump: Quick fix for OSX 10.5 native ruby.

  14 Oct 2007; Tom Gall <tgall@gentoo.org> ruby-inline-3.6.4.ebuild:
  added ~ppc64

*ruby-inline-3.6.4 (25 Aug 2007)

  25 Aug 2007; Hans de Graaff <graaff@gentoo.org> +ruby-inline-3.6.4.ebuild:
  Version bump: Added ability to include ruby.h last

  13 Apr 2007; Robin H. Johnson <robbat2@gentoo.org>
  ruby-inline-3.6.2.ebuild:
  Add ~ppc and ~amd64 for work.

*ruby-inline-3.6.2 (04 Feb 2007)

  04 Feb 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org> +metadata.xml,
  +ruby-inline-3.6.2.ebuild:
  Initial ebuild by Guillaume Benny <guillaume.benny@sympatico.ca>, #147065
