@@ -1,8 +1,6 @@
-DIST RubyInline-3.6.7.gem 23552 RMD160 a2930e1df78f29bfcd34b49238e9b127e9e5bc09 SHA1 71f7bc398d357348448b2a5e27173dd7b738167b SHA256 5265848c47f61e4f185b0d88e8b7c4bf59a612cd4313b560955c9ed320c7aab6
-DIST RubyInline-3.7.0.gem 22016 RMD160 4469f91d16db2fd15f39994630fa6346912ba098 SHA1 c6a5f03d0bb2b4b015635a62eb7245f47af79c9b SHA256 5ab8ef4243e7e4abd39d35e0b8f9f0e91e803a4fefd89aac8134aff3f07e76d4
 DIST RubyInline-3.8.1.gem 24576 RMD160 b5a46f87377b889da63f6daccee1f4bdee688a28 SHA1 4a8610d2cf6da5a9f8d7cbf3a8b320724973866d SHA256 54577d9ff40f7c6c53be10e49a5b87ba91fd2f6601a7e2eaf4f8dda711db3e10
-EBUILD ruby-inline-3.6.7.ebuild 562 RMD160 d7904525f00a138e322ea0b0cd16599c8c112f1e SHA1 fdd2ce1b942b6c60a7b58ea5471648b6178d5e2d SHA256 05e4094b2113eb75453efaad5adf6ec73aff1be70b9b39b766555d249c8bfde6
-EBUILD ruby-inline-3.7.0.ebuild 588 RMD160 2713fc7a92b1e748c94e55f43c12eab2cbbc70a5 SHA1 648cc3d510ed5cc6c53ccccfdece96cfa21b749a SHA256 d8bd4ba36950f833edb922353321e864d8e5a06e4e86480873a6d41ee98b2c94
+DIST RubyInline-3.8.2.gem 28160 RMD160 69325acf7c73609b4cc8860e435684d721d98cd7 SHA1 51228ca560070a1555341f70f23acf56cde1bbb1 SHA256 03a73a6a5471160d53390f12f91010de0dc995e692f30cdc7a246d15e0b4c34d
 EBUILD ruby-inline-3.8.1.ebuild 606 RMD160 c9a166656510e815275a914ff0f4578c54187f7e SHA1 58f466c04fe5ce0ccc33d1c7692a40a2df092fb8 SHA256 7c860e3e3605049de8c1e595a562e58466d5a887d1d1184d901c46552509f2b9
-MISC ChangeLog 1723 RMD160 d719d709f754a5097ff82a20b19fb1edf6cbf7a3 SHA1 bcc4519b94f24a696d6f09ab15f80132c16e1d09 SHA256 5833612a5a0b34fe1e7c0a862f5dfbd72a96a3ca0d76e3875115c0bb2a3ca355
+EBUILD ruby-inline-3.8.2.ebuild 604 RMD160 7398c006b1f4630b41a3f4d2df63a90b4c350723 SHA1 a33b19a3597435f183afddaaa14f37edb9402bf9 SHA256 2f036f0dc4455b95cf7570d7f55de20b94c9ec379bde58591f795c2b02101c90
+MISC ChangeLog 2012 RMD160 25f40fbe05af92628f3239e91602f5381164a911 SHA1 546088f980be743b9bfa8c5b153984cf101e9a56 SHA256 d3329cd6171b3e24992477912e8d77102cecc75a3f7b9c4d5f3eb2979c6fc9dd
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
