@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-inline/ruby-inline-3.6.7.ebuild,v 1.1 2008/03/24 22:53:36 rbrown Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-inline/ruby-inline-3.8.2.ebuild,v 1.1 2009/07/25 04:56:05 graaff Exp $
 
 inherit gems
 
@@ -14,4 +14,7 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE=""
 
-DEPEND=">=dev-ruby/hoe-1.3.0"
+DEPEND="dev-ruby/zentest"
+RDEPEND="${DEPEND}"
+
+USE_RUBY="ruby18 ruby19"
